2008-12-11  Daniel Elstner  <danielk@openismus.com>

	Bug 563994 – Input method module interface not documented

	* gtk/gtkimcontext.h: Add public/private markers.
	* gtk/gtkimcontext.c: Add section documentation which explains how
	to add a new input method module to GTK+.  Document the signals and
	virtual functions of GtkIMContextClass.
	* gtk/gtkimmodule.c: Document struct GtkIMContextInfo.
	* docs/reference/gtk/gtk-sections.txt: Add GtkIMContextClass and
	GtkIMContextInfo to section GtkIMContext.
	* docs/reference/gtk/Makefile.am (IGNORE_HFILES): Remove
	gtkimmodule.h from the list in order to pick up GtkIMContextInfo.
	* docs/reference/gtk/tmpl/gtkimcontext.sgml: Remove file from
	repository since all the hand-edited content has been migrated to
	source file comments.

2008-12-10  Matthias Clasen  <mclasen@redhat.com>

        Bug 563991 – gtk_file_chooser_button_new_with_backend is deprecated
        -- but what should be used instead?

        * gtk/gtkfilechooserbutton.c: Enhanced deprecation annotation.

2008-12-10  Daniel Elstner  <danielk@openismus.com>

	Maintenance of Multipress input method by Openismus GmbH:

	* modules/input/gtkimcontextmultipress.[ch]: Clean up the code
	a bit to follow the GTK+ coding style more closely.  Fix the code
	to emit "preedit-start" and "preedit-end", too, rather than only
	"preedit-changed".
	(GTK_IM_CONTEXT_MULTIPRESS*): Rename incorrectly spelled macros
	gtk_im_context_multipress*. Shouldn't break API or ABI as it's
	only used internally.
	* modules/input/immultipress.c: More cleanup,
	* modules/input/README.multipress: ditto.

2008-12-09  Michael Natterer  <mitch@imendio.com>

	* gdk/gdk.symbols: add missing #ifndef GDK_DISABLE_DEPRECATED.

2008-12-09  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcontainer.c (struct PackingPropertiesData): add missing
	semicolon.

	* gtk/gtkcontainer.c (attributes_text_element): "value" is a
	gchar*, not const gchar*.

2008-12-07  Matthias Clasen  <mclasen@redhat.com>
